# peel

./: .env.example  .gitignore  LEARNINGS.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: weekly.yml
data/: peel.db
scripts/: bootstrap_refresh_token.py
src/peel/: __init__.py  config.py  db.py  main.py  matcher.py  models.py  spotify_client.py  telegram.py
src/peel/sources/: base.py  rss.py
tests/: test_db.py  test_main.py  test_matcher.py  test_rss.py  test_spotify_client.py  test_telegram.py
tests/fixtures/: gorillavsbear.xml  pitchfork_best_albums.xml  pitchfork_bnt.xml  pitchfork_feed.xml  stereogum_new_music.xml  thequietus.xml
