[project]
name = "peel"
version = "0.1.0"
description = "Music discovery aggregator — weekly curated tracks → Spotify playlist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "spotipy>=2.23",
    "feedparser>=6.0",
    "selectolax>=0.3",
    "rapidfuzz>=3.9",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "python-dotenv>=1.0",
]

[project.scripts]
peel = "peel.main:run"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
